syntax = "proto3";

package user;

option go_package = "github.com/sudhin-az/E-LEARNING-GRPC/user-service/proto";

service UserService {
    rpc CreateUser (UserRequest) returns (UserResponse);
    rpc GetAllUsers (Empty) returns (UserResponse);
}

message UserRequest {
    string name = 1;
    string email = 2;
}

message UserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
}

message UserID {
    string id = 1;
}